--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 .meta filter=lfs diff=lfs merge=lfs -text
+.asset filter=lfs diff=lfs merge=lfs -text
+.txt filter=lfs diff=lfs merge=lfs -text
+.cache filter=lfs diff=lfs merge=lfs -text
